# gptipsum

./: .gitignore  Cargo.toml  README.md  build.rs  justfile
data/: emojis
docker/: llmipsum.dockerfile
src/: main.rs
